sample-apps/12-greet/kubernetes/greet-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: elb
  name: service-greet
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
     app: greet
